# extremexp-AnalyticsCatalogue

./: .gitmodules  Dockerfile  README.md  docker-compose.yaml
libraries/metalearning_ml/meta-learning-main/: README.md
libraries/opportunistic_ml/randomly-constrained-learning-master/: .gitignore  LICENSE  README.md  pylock.toml  pyproject.toml
libraries/opportunistic_ml/randomly-constrained-learning-master/md/: components.md  cost.md  fp_fn_perturbed_bce.md  installation.md  nnpl.md  overview.md  rbd_P2P_desktop_summary.md  unsw_perturbed_bce.md
libraries/opportunistic_ml/randomly-constrained-learning-master/rcl/: __init__.py  ann.py  arch.py  bench.py  comp.py  doc.py  flaxar.py  flaxut.py  ill.py  loss.py  nnpl.py  util.py
libraries/scalable_ml/: README.md  testing.ipynb
libraries/scalable_ml/src/genAEs/: genMLP.py
libraries/scalable_ml/src/helper_function/: matGen.py
portal/: main.py
services/data_augmentation/: Dockerfile  README.md  entrypoint.sh  requirements.txt
services/data_augmentation/src/: config_env.py  main_tabular.py  main_time_series.py  metrics.py  validation.py
services/data_augmentation/src/data_augmentation/: adasyn_algorithm.py  ctgan_algorithm.py
services/data_augmentation/src/data_augmentation_time_series/: main.py
services/data_selection/: Dockerfile  docker-compose.yml  init.cypher  requirements.txt  script.sh  temp_dump
services/data_selection/data/: datasets.csv
services/data_selection/docker/: Dockerfile
services/data_selection/src/: main.py  main_policy_based.py  metrics.py  server.py
(+42 files in other folders)
